--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,218 @@
-<h1>Pages#home</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
+<div class="bg-white">
+  <!-- Banner Desktop -->
+  <div class="landing-card d-none d-sm-block">
+    <div class="col-12 col-lg-6">
+      <br>
+      <div class="d-none d-xl-block">
+        <br>
+      </div>
+      <div class="d-none d-sm-block">
+        <h2 id="landing-hero-h1">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor</h2>
+      </div>
+      <div class="d-block d-sm-none">
+        <h2 id="landing-hero-h1-small">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor</h2>
+      </div>
+      <br>
+      <div id="signup">
+        <a href="#signUp" class="btn btn-sign-up">Sign up</a>
+      </div>
+    </div>
+    <%= image_tag "banner-image.svg", alt: 'Banner Image', class: 'homepage-image d-none d-lg-block d-xl-block' %>
+  </div>
+
+  <!-- Banner Mobile -->
+  <div class="landing-card-mobile d-block d-sm-none">
+    <div class="col-12 col-lg-6">
+      <br>
+      <div class="d-none d-xl-block">
+        <br>
+      </div>
+      <div class="d-none d-sm-block">
+        <h2 id="landing-hero-h1">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor</h2>
+      </div>
+      <div class="d-block d-sm-none">
+        <h2 id="landing-hero-h1-small">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor</h2>
+      </div>
+      <br>
+      <div id="signup" class="pb-5">
+        <a href="#signUp" class="btn btn-sign-up">Sign up</a>
+      </div>
+    </div>
+    <%= image_tag "banner-image.svg", alt: 'Banner Image', class: 'homepage-image d-none d-lg-block d-xl-block' %>
+  </div>
+
+  <!-- How -->
+  <a class="home-a-tag" name="about"></a>
+  <br>
+  <div>
+    <div class="col-10 section" id="about">
+      <h1 class="d-flex justify-content-center">So how does it work?</h1>
+      <br>
+      <br>
+      <br>
+      <div class="d-none d-sm-block">
+        <div class="d-flex justify-content-center">
+          <p class="how-text-large">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        </div>
+      </div>
+      <div class="d-block d-sm-none">
+        <div class="d-flex justify-content-center">
+          <p class="how-text-large">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        </div>
+      </div>
+      <br>
+      <br>
+      <div class="d-flex justify-content-center pb-5" id="signup">
+        <a href="#signUp" class="btn btn-sign-up">Sign up</a>
+      </div>
+      <br>
+      <br>
+      <br>
+      <br>
+      <h2 class="d-flex justify-content-center">The Process</h2>
+      <br>
+      <div class="row">
+        <div class="card-invisble col-lg-4 col-sm-6">
+          SVG 1
+          <br>
+          <br>
+          <p class="align-middle"><b>Lorem ipsum</b></p>
+          <p class="align-middle">Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
+        </div>
+        <div class="card-invisble col-lg-4 col-sm-6">
+          SVG 2
+          <br>
+          <br>
+          <p class="align-middle"><b>Lorem ipsum</b></p>
+          <p class="align-middle">Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
+        </div>
+        <div class="card-invisble col-lg-4 col-sm-6">
+          SVG 3
+          <br>
+          <br>
+          <p class="align-middle"><b>Lorem ipsum</b></p>
+          <p class="align-middle">Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!-- Sign up -->
+  <a name="signUp"></a>
+  <br>
+  <br>
+  <div>
+    <div class="col-12 section-sign-up" id="sign-up">
+      <h1 class="d-flex justify-content-center text-center">Sign up to hear about our launch</h1>
+      <br>
+      <div class="container d-flex justify-content-center">
+        <div class="col-lg-6 align-center info">
+        <form name="submit-to-google-sheet" class="newsletter">
+          <div class="p-3">
+            <input name="email" type="email" placeholder=" hello@companyname.co.uk" required style="width: 100%;">
+          </div>
+          <div class="p-3">
+            <br>
+            <button type="submit" class="btn btn-contact">Subscribe</button>
+          </div>
+        </form>
+        </div>
+
+        <script>
+
+          var scriptURL = 'Change this to the appropriate google script url'
+          var form = document.forms['submit-to-google-sheet']
+          var running = false
+
+          form.addEventListener('submit', e => {
+            if (running === true) {
+              setTimeout(function(){ location.reload(); }, 3000)
+              running = false;
+              return false;
+            }
+            running = true;
+            e.preventDefault()
+            fetch(scriptURL, { method: 'POST', body: new FormData(form)})
+              .then(response => console.log('Success!', response))
+              .catch(error => console.error('Error!', error.message))
+              setTimeout(function(){ location.reload(); }, 3000);
+          })
+
+        </script>
+      </div>
+
+    </div>
+  </div>
+
+  <!-- Team -->
+  <a name="team"></a>
+  <br>
+  <br>
+  <div>
+    <div class="col-10" id="team">
+      <h1 class="d-flex justify-content-center">Who are we?</h1>
+      <br>
+      <div class="row d-flex justify-content-between">
+        <div class="card col-xl-5">
+          <%= image_tag "avatar.jpg", alt: 'Chris Williams headshot', class: 'avatar-large mx-auto d-block'%>
+          <h4 class="c-header">Chris</h4>
+          <div class="profile-links mx-auto d-block">
+            <a href="https://www.linkedin.com/in/mrchristopherwilliams/" target="_blank"><i class="fab fa-linkedin"></i></a>
+            <a href="https://github.com/MrChristopherWilliams" target="_blank"><i class="fab fa-github"></i></a>
+            <!-- <a href="https://twitter.com/Mr_ChristopherW" target="_blank"><i class="fab fa-twitter"></i></a> -->
+          </div>
+          <p class="profile-text">Chris is the one who is always coming up with new entrepreneurial ideas. He's been building apps and writing code for years. He got his Masters in Global Health Science before working as a healthcare strategy consultant and venture capitalist.</p>
+        </div>
+        <div class="card col-xl-5">
+          <%= image_tag "avatar.jpg", alt: 'David Hansford headshot', class: 'avatar-large mx-auto d-block'%>
+          <h4 class="c-header">David</h4>
+          <div class="profile-links mx-auto d-block">
+            <a href="https://www.linkedin.com/in/david-hansford-56318178/" target="_blank"><i class="fab fa-linkedin"></i></a>
+            <a href="https://github.com/DJHansford" target="_blank"><i class="fab fa-github"></i></a>
+            <!-- <a href="#" target="_blank"><i class="fab fa-twitter"></i></a> -->
+          </div>
+          <p class="profile-text">David's obsession with sleep started when he realised his Mum was only sleeping 3-4 hours a night. Years of personal research later and you'll find him in the evenings with yellow glasses on, checking the thermostat and complaining that the lights are too bright. He has an Oxford PhD in optics and enjoys coding.</p>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!-- Contact us -->
+  <a name="contactUs"></a>
+  <br>
+  <br>
+  <div>
+    <div class="col-12" id="contact">
+      <h1 class="d-flex justify-content-center">Let's chat</h1>
+      <br>
+      <br>
+      <div class="container d-flex justify-content-center">
+        <br>
+        <div class="col-lg-6">
+          <div class="info">
+            <form
+              action="Change to the correct formspree link"
+              method="POST"
+              class="contact"
+            >
+              <div class="p-1">
+                <input type="text" name="_replyto" placeholder="Email" required>
+              </div>
+              <br>
+              <div class="p-1">
+                <textarea name="message" id="message" placeholder="Type your message here..."></textarea>
+              </div>
+              <br>
+              <br>
+              <div>
+                <button type="submit" href="/" class="btn-contact">Send</button>
+              </div>
+            </form>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <br>
+  <br><br><br>
+</div>
