--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -205,7 +205,7 @@
               <br>
               <br>
               <div>
-                <button type="submit" href="/" class="btn-contact">Send</button>
+                <button type="submit" href="/" class="btn btn-contact">Send</button>
               </div>
             </form>
           </div>
