Added svgs to boilerplate

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -73,21 +73,21 @@
       <br>
       <div class="row">
         <div class="card-invisble col-lg-4 col-sm-6">
-          SVG 1
+          <%= image_tag "one.svg", alt: 'One', class: 'avatar-large mx-auto d-block'%>
           <br>
           <br>
           <p class="align-middle"><b>Lorem ipsum</b></p>
           <p class="align-middle">Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
         </div>
         <div class="card-invisble col-lg-4 col-sm-6">
-          SVG 2
+          <%= image_tag "two.svg", alt: 'Two', class: 'avatar-large mx-auto d-block'%>
           <br>
           <br>
           <p class="align-middle"><b>Lorem ipsum</b></p>
           <p class="align-middle">Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
         </div>
         <div class="card-invisble col-lg-4 col-sm-6">
-          SVG 3
+          <%= image_tag "three.svg", alt: 'Three', class: 'avatar-large mx-auto d-block'%>
           <br>
           <br>
           <p class="align-middle"><b>Lorem ipsum</b></p>
@@ -152,6 +152,7 @@
     <div class="col-10" id="team">
       <h1 class="d-flex justify-content-center">Who are we?</h1>
       <br>
+      <br>
       <div class="row d-flex justify-content-between">
         <div class="card col-xl-5">
           <%= image_tag "avatar.jpg", alt: 'Chris Williams headshot', class: 'avatar-large mx-auto d-block'%>
@@ -159,19 +160,19 @@
           <div class="profile-links mx-auto d-block">
             <a href="https://www.linkedin.com/in/mrchristopherwilliams/" target="_blank"><i class="fab fa-linkedin"></i></a>
             <a href="https://github.com/MrChristopherWilliams" target="_blank"><i class="fab fa-github"></i></a>
-            <!-- <a href="https://twitter.com/Mr_ChristopherW" target="_blank"><i class="fab fa-twitter"></i></a> -->
+            <a href="https://twitter.com/Mr_ChristopherW" target="_blank"><i class="fab fa-twitter"></i></a>
           </div>
-          <p class="profile-text">Chris is the one who is always coming up with new entrepreneurial ideas. He's been building apps and writing code for years. He got his Masters in Global Health Science before working as a healthcare strategy consultant and venture capitalist.</p>
+          <p class="profile-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
         </div>
         <div class="card col-xl-5">
-          <%= image_tag "avatar.jpg", alt: 'David Hansford headshot', class: 'avatar-large mx-auto d-block'%>
-          <h4 class="c-header">David</h4>
+          <%= image_tag "avatar.jpg", alt: 'XX headshot', class: 'avatar-large mx-auto d-block'%>
+          <h4 class="c-header">Lorem ipsum</h4>
           <div class="profile-links mx-auto d-block">
-            <a href="https://www.linkedin.com/in/david-hansford-56318178/" target="_blank"><i class="fab fa-linkedin"></i></a>
-            <a href="https://github.com/DJHansford" target="_blank"><i class="fab fa-github"></i></a>
-            <!-- <a href="#" target="_blank"><i class="fab fa-twitter"></i></a> -->
+            <a href="https://www.linkedin.com/" target="_blank"><i class="fab fa-linkedin"></i></a>
+            <a href="https://github.com/" target="_blank"><i class="fab fa-github"></i></a>
+            <a href="#" target="_blank"><i class="fab fa-twitter"></i></a>
           </div>
-          <p class="profile-text">David's obsession with sleep started when he realised his Mum was only sleeping 3-4 hours a night. Years of personal research later and you'll find him in the evenings with yellow glasses on, checking the thermostat and complaining that the lights are too bright. He has an Oxford PhD in optics and enjoys coding.</p>
+          <p class="profile-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
         </div>
       </div>
     </div>
